<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:slideswitch="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/contentbg">
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="#ff9900"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/back_Iv"
            style="@style/BackImageStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/version_description"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:scaleType="centerInside"
            android:src="@mipmap/logo"
            android:visibility="gone"/>

        <TextView android:id="@+id/tv_share"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignParentRight="true"
                  android:layout_centerVertical="true"
                  android:layout_marginRight="10dp"
                  android:text="分享"
                  android:textColor="@color/white"
                  android:textSize="16sp"
        />


    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="15dp">

        <ImageView android:layout_width="160dp"
            android:layout_height="120dp"
            android:src="@mipmap/logo"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:paddingTop="10dp"
            android:src="@drawable/runtuimage"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/tow_code_down_font"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/special_declaration"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/statement_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/latest_version"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/version_number"/>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>