<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:slideswitch="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/contentbg"
              android:gravity="center_horizontal"
              android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:layout_alignParentTop="true"
        android:background="#ff9900"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/back_Iv"
            style="@style/BackImageStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/about_us"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">




     <LinearLayout android:layout_width="match_parent"
                   android:orientation="vertical"
                   android:background="@android:color/white"
                   android:layout_height="match_parent">

         <ImageView android:layout_width="160dp"
             android:layout_height="120dp"
             android:layout_gravity="center_horizontal"
             android:src="@mipmap/logo"/>


         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:lineSpacingExtra="5dp"
             android:padding="15dp"
             android:text="@string/company_introduce"/>

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"

             android:layout_marginTop="15dp"
             android:gravity="center_horizontal"
             android:text="@string/copyright_message"/>

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="10dp"
             android:gravity="center_horizontal"
             android:text="@string/app_records_number"/>


     </LinearLayout>

    </ScrollView>
</LinearLayout>