<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">
        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#ff9900"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/back_Iv"
                style="@style/BackImageStyle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/merchants_dynamic"
                android:textColor="@android:color/white"
                android:textSize="20dp"/>



        </RelativeLayout>
        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout1"
            android:background="@color/contentbg"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="14dp"
            android:text="@string/choice_release_class_type"/>
        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text1"
            android:background="#ffffff"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_weight="1"
                android:background="@null"
                android:textSize="14dp"
                android:drawableLeft="@drawable/release_red_dot"
                android:drawablePadding="10dp"

                android:paddingLeft="20dp"
                android:text="@string/release_person"/>
            <TextView
                android:id="@+id/et_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/input_name"
                android:maxLength="5"
                android:layout_gravity="right"
                android:gravity="right"
                android:paddingRight="20dp"
                android:textSize="15dp"/>

        </LinearLayout>
        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/linearLayout1"
            android:background="#B7B7B7"/>
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line1"
            android:background="#ffffff"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_weight="1"
                android:background="@null"
                android:textSize="14dp"
                android:drawableLeft="@drawable/release_red_dot"
                android:drawablePadding="10dp"
                android:paddingLeft="20dp"
                android:text="@string/contact_information"/>
            <TextView
                android:id="@+id/et_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/input_mobile_phone_number"
                android:inputType="number"
                android:maxLength="11"
                android:gravity="right"
                android:paddingRight="20dp"
                android:textSize="15dp"/>

        </LinearLayout>
        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/linearLayout2"
            android:background="#B7B7B7"/>
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line2"
            android:background="#ffffff"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@drawable/release_red_dot"
                android:drawablePadding="10dp"
                android:paddingLeft="20dp"
                android:textSize="14dp"
                android:text="@string/verification_code"/>
            <EditText
                android:id="@+id/et_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/input_verification_code"
                android:maxLength="6"
                android:paddingRight="20dp"
                android:inputType="number"
                android:textSize="15dp"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#B7B7B7"/>
            <TextView
                android:id="@+id/tv_btnCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="@string/get_verification_code"
                android:textSize="14dp"
                android:textColor="#ff9900"/>

        </LinearLayout>

        <View
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/linearLayout3"
            android:background="#B7B7B7"/>
        <ImageView
            android:id="@+id/release_Iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line3"
            android:paddingTop="20dp"
            android:src="@drawable/confirm_release"/>
    </RelativeLayout>

    <include layout="@layout/layout_loading"/>
</FrameLayout>